# Disertatie

./: .gitignore  CMakeLists.txt  idf_component.yml  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Test.cpp  Test.h  idf_component.yml  main.c  main.cpp
main/Modbus/: MbClient.cpp  MbClient.h  MbClient.hpp  MbManager.cpp  MbManager.hpp  Modbus.cpp  Modbus.h
main/Mqtt/: MqttClient.cpp  MqttClient.hpp
main/NetworkManager/: NetworkManager.c  NetworkManager.cpp  NetworkManager.h  NetworkManager.hpp  Tests.c
main/NetworkManager/Tests/: Tests.h
